--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "VueJS-with-Vite",
+  "name": "http-",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "vitest"
   },
   "dependencies": {
-    "vue": "^3.1.4"
+    "axios": "^1.4.0",
+    "element-plus": "^2.3.8",
+    "pinia": "^2.1.4",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.4",
-    "@vue/compiler-sfc": "^3.1.4",
-    "vite": "^2.3.8"
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/test-utils": "^2.4.1",
+    "jsdom": "^22.1.0",
+    "less": "^4.1.3",
+    "less-loader": "^6.0.0",
+    "vite": "^4.4.6",
+    "vitest": "^0.33.0"
   }
 }
+
