--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "nprogress": "^0.2.0",
     "axios": "^1.4.0",
     "element-plus": "^2.3.8",
     "pinia": "^2.1.4",
@@ -25,4 +26,3 @@
     "vitest": "^0.33.0"
   }
 }
-
